# pgql-cdc

./: Cargo.toml
src/: main.rs  models.rs  replication.rs
